Made leaderboard update faster